--- a/module_E1/about.html
+++ b/module_E1/about.html
@@ -13,15 +13,17 @@
                 <h1>Моё хобби</h1>
             </div>
 
+            <nav>
             <ul class="navigation">
                 <li><a href="index.html" class="nav-link">Главная</a></li>
                 <li><a href="#" class="nav-link">Обо мне</a></li>
                 <li><a href="contacts.html" class="nav-link">Обратная связь</a></li>
             </ul>
+           </nav>
         </div>
     </div>
 
-     <div class="content about-content">
+     <main class="content about-content">
         <div class="about-info">
             <div class="text">
                 <h2>Обо мне</h2>
@@ -29,6 +31,6 @@
             </div>
             <img src="my_photo.jpeg" alt="Ваше фото">
         </div>
-    </div>
+    </main>
 </body>
 </html>
