--- a/module_E1/index.html
+++ b/module_E1/index.html
@@ -12,25 +12,26 @@
             <div class="logo-container">
                 <h1>Моё хобби</h1>
             </div>
-
+            <nav>
             <ul class="navigation">
                 <li><a href="#" class="nav-link">Главная</a></li>
                 <li><a href="about.html" class="nav-link">Обо мне</a></li>
                 <li><a href="contacts.html" class="nav-link">Обратная связь</a></li>
             </ul>
+            </nav>
         </div>
     </div>
 
 
-    <div class="content">
+    <main class="content">
     <div class="hobby-info">
-        <img src="my_hobby.jpeg" alt="Фото хобби">
+        <img src="my_hobby.jpeg" alt="Фото замка в Словакии, май 2024 года">
         <div class="text">
             <h2>Добро пожаловать на сайт о моём хобби!</h2>
             <p>Я страстный любитель путешествий и гор. Это отличный способ отвлечься от повседневной рутины и отдохнуть в уединении с природой. Всем советую, оно того стоит! :)</p>
         </div>
     </div>
     <p class="caption">Плавецкий замок, малые Карпаты, Словакия, май 2024</p>
-    </div>
+    </main>
 </body>
 </html>
