--- a/module_E1/contacts.html
+++ b/module_E1/contacts.html
@@ -13,15 +13,17 @@
                 <h1>Моё хобби</h1>
             </div>
 
+            <nav>
             <ul class="navigation">
                 <li><a href="index.html" class="nav-link">Главная</a></li>
                 <li><a href="about.html" class="nav-link">Обо мне</a></li>
                 <li><a href="#" class="nav-link">Обратная связь</a></li>
             </ul>
+            </nav>
         </div>
     </div>
 
-    <div class="content">
+    <main class="content">
         <h2>Обратная связь</h2>
         <p>Вы можете связаться со мной через следующие каналы:</p>
         <ul>
@@ -29,6 +31,6 @@
             <li>Telegram: @wandering_explorer</li>
             <li>Instagram: @kar_ars</li>
         </ul>
-    </div>
+    </main>
 </body>
 </html>
